<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_home_home"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@color/white"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/homme"
                android:contentDescription="@string/home"
                />

            <ImageView
                android:id="@+id/iv_home_logo"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/logo" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/riv_home_avatar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerCrop"
                android:src="@drawable/tomek"
                android:padding="2dp"
                app:riv_oval="true"
                android:background="@drawable/circle_frame"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_news"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_home_menu"
                android:padding="2dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                app:srcCompat="@drawable/manuu"
                android:contentDescription="@string/menu"
                tools:ignore="NestedWeights" />

            <ImageButton
                android:id="@+id/bt_home_mapa"
                android:padding="2dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/white"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/mapaa"
                tools:ignore="TouchTargetSizeCheck"
                android:contentDescription="@string/mapa" />

            <ImageButton
                android:id="@+id/bt_home_league"
                android:padding="2dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/white"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ranking"
                android:contentDescription="@string/ranking"/>

            <ImageButton
                android:id="@+id/bt_home_society"
                android:padding="2dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/white"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/society"
                android:contentDescription="@string/spolecznosc"/>

            <ImageButton
                android:id="@+id/bt_home_chat"
                android:padding="2dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/white"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/chat"
                android:contentDescription="@string/wiadomosci"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/main_menu" />

</androidx.drawerlayout.widget.DrawerLayout>